기본 헤더라인 스타일 추가

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,4 @@
 * {margin:0;padding:0;}
 body {font:normal 16px/1.5 arial,dotum;}
 img {background:none;}
+h1 {text-align:center; margin:50px auto;border-bottom:1px solid #333;}
